Hematology complete, however needs to be polished, folding done, started with clinical Physiology

--- a/bloodRecord.tex
+++ b/bloodRecord.tex
@@ -35,8 +35,9 @@
 	\begin{document}
 	%\pdfrender{StrokeColor=black,TextRenderingMode=2,LineWidth=0.1pt}
 	\afterpage{\blankpage}
+	%-------Hematology----{{{
 	\part{Hematology}
-
+%-------CompoundMicroscope---{{{
 	\chapter*{\centering Compound Microscope}
 
 	\begin{tabular}{p{5in} p{1in}}
@@ -183,6 +184,8 @@
 				\item How will you calculate the total magnification power of the microscope for each objective?
 				\item Name the other types of microscope.
 			\end{enumerate}
+			%------}}}
+			%-----------Hemocytometer----{{{
 
 			\chapter*{\centering Hemocytometer}
 			\begin{tabular}{p{5in} p{1in}}
@@ -355,7 +358,8 @@
 						\item{	 What are the other cells that can be counted using Neubauer’s chamber?}
 						\item{	 Mention the differences between RBC and WBC pipettes.}
 					\end{enumerate}
-
+					%-----------}}}
+					%-------RBCcount---{{{
 					\chapter*{\centering Estimation Of Total RBC Count}
 
 					\begin{tabular}{p{5in} p{1in}}
@@ -406,7 +410,8 @@
 
 
 					\end{enumerate}
-
+					%-----------}}}
+					%--------WBC count---{{{
 					\chapter*{\centering Estimation Of Total WBC Count}
 
 					\begin{tabular}{p{5in} p{1in}}
@@ -456,7 +461,8 @@
 						\item{ What is Leucocytosis ?}
 						\item{ What is Leukemia?}
 					\end{enumerate}
-
+					%----}}}
+%------AEC---{{{
 					\chapter*{\centering Absolute Eosinophil Count}
 
 					\begin{tabular}{p{5in} p{1in}}
@@ -498,7 +504,8 @@
 						\item{What are the functions of eosinophils?}
 						\item{What are eosinopenia and eosinophilia?}
 					\end{enumerate}
-
+					%-----}}}
+%-----DC{{{
 					\chapter*{\centering Diffrential Count}
 					\begin{tabular}{p{5in} p{1in}}
 						\textbf{Exp No:}  & \textbf{Date:}\\
@@ -625,11 +632,8 @@
 									\hline
 								\end{tabularx}	
 							\end{center}
-
-
-
-
-
+							%------}}}
+%---------Hb---{{{
 							\chapter*{\centering Hemoglobin Estimation}
 							\begin{tabular}{p{5in} p{1in}}
 								\textbf{Exp No:}  & \textbf{Date:}\\
@@ -677,6 +681,8 @@
 									\item{What are the differences between adult Hb \& fetal Hb?}
 									\item{What are the different RBC indices? What are their clinical significance?}
 								\end{enumerate}
+								%-----}}}
+								%-------BloodGrouping---{{{
 
 								\chapter*{\centering Blood Grouping \& Typing}
 								\begin{tabular}{p{5in} p{1in}}
@@ -726,6 +732,8 @@
 										\item{What are the indications and hazards of blood transfusion?}
 										\item{What are the differences between ABO system and Rh system?}
 									\end{enumerate}
+									%---------------}}}
+									%----BleedingTime---{{{
 
 									\chapter*{\centering Estimation Of Bleeding Time}
 									\begin{tabular}{p{5in} p{1in}}
@@ -770,230 +778,291 @@
 											\item{Name few conditions where bleeding time is prolonged?}
 											\item{What is Thrombocytopenic purpura? Comment on the clotting time in this condition.}
 										\end{enumerate}
-
-
+										%------------------------}}}
+%------------ClottingTime---{{{
 										\chapter*{\centering Estimation Of Clotting Time}
 										\begin{tabular}{p{5in} p{1in}}
 											\textbf{Exp No:}  & \textbf{Date:}\\
 										\end{tabular}
 										\section*{Aim}
 
-									\addfig{%
-										\begin{figure}[h]
-											\centering
-											\includegraphics[scale=.5]{./clottingTime.jpg}
-											\label{clottingTime}
-											\caption*{\textbf{Estimation Of Clotting Time}}
-										\end{figure}
-										}
-										To determine the clotting time of blood by Wright’s capillary glass tube method.
-										\section*{Apparatus Required}
-										Capillary glass tube, lancet, spirit, cotton swabs \& stop watch.
-										\section*{Principle}
-										When blood comes in contact with glass surface, the coagulation pathway gets activated.
-										The time taken for the formation of insoluble fibrin thread(blood clot) is called clotting time.
-										\section*{Procedure}
-										\begin{enumerate}
-											\item{Clean the tip of the ring finger with spirit and allow the finger to dry.}
-											\item{Make a good deep finger prick with the lancet to get free flowing blood.}
-											\item{Do not squeeze the finger.}
-											\item{When a blood drop of optimum size has formed, gently place the end of the capillary tube in the drop such that the other end of the tube is at a lower level.}
-											\item{Blood enters readily into the tube by capillary action.}
-											\item{Start the stop watch.}
-											\item{Hold the capillary tube with blood between the palms to maintain it at body temperature.}
-											\item{After 2 minutes, break a small bit of capillary tube at its end and check for the formation of fibrin thread.}
-											\item{Repeat it every 30 seconds until the appearance of insoluble fibrin thread between the broken ends of capillary tube and note the time.}
-											\item{The appearance of the fibrin thread indicates that the blood has clotted.}
-											\item{The total time taken for the formation of fibrin thread is recorded as the clotting time.}
-											\item{Normal clotting time by this method is 2-8 minutes.}
-										\end{enumerate}
-										\section*{Result}
+										\addfig{%
+											\begin{figure}[h]
+												\centering
+												\includegraphics[scale=.5]{./clottingTime.jpg}
+												\label{clottingTime}
+												\caption*{\textbf{Estimation Of Clotting Time}}
+											\end{figure}
+											}
+											To determine the clotting time of blood by Wright’s capillary glass tube method.
+											\section*{Apparatus Required}
+											Capillary glass tube, lancet, spirit, cotton swabs \& stop watch.
+											\section*{Principle}
+											When blood comes in contact with glass surface, the coagulation pathway gets activated.
+											The time taken for the formation of insoluble fibrin thread(blood clot) is called clotting time.
+											\section*{Procedure}
+											\begin{enumerate}
+												\item{Clean the tip of the ring finger with spirit and allow the finger to dry.}
+												\item{Make a good deep finger prick with the lancet to get free flowing blood.}
+												\item{Do not squeeze the finger.}
+												\item{When a blood drop of optimum size has formed, gently place the end of the capillary tube in the drop such that the other end of the tube is at a lower level.}
+												\item{Blood enters readily into the tube by capillary action.}
+												\item{Start the stop watch.}
+												\item{Hold the capillary tube with blood between the palms to maintain it at body temperature.}
+												\item{After 2 minutes, break a small bit of capillary tube at its end and check for the formation of fibrin thread.}
+												\item{Repeat it every 30 seconds until the appearance of insoluble fibrin thread between the broken ends of capillary tube and note the time.}
+												\item{The appearance of the fibrin thread indicates that the blood has clotted.}
+												\item{The total time taken for the formation of fibrin thread is recorded as the clotting time.}
+												\item{Normal clotting time by this method is 2-8 minutes.}
+											\end{enumerate}
+											\section*{Result}
 
-										The clotting time determined by Wright's capillary glass is $\rule{5cm}{0.1cm}$
-										\section*{Questions}
-										\begin{enumerate}
-											\item{Define clotting time.}
-											\item{What are the other methods used to determine the clotting time?}
-											\item{Name the conditions in which clotting time is prolonged.}
-											\item{What is haemophilia? Comment on the clotting time in this condition.}
-											\item{What is clot retraction time?}
-											\item{Name the Vitamin K dependent coagulation factors.}
-											\item{What is an anticoagulant? Mention some invivo and invitro anticoagulants.}
-											\item{Name the proteins involved in fibrinolytic system.}
-										\end{enumerate}
+											The clotting time determined by Wright's capillary glass is $\rule{5cm}{0.1cm}$
+											\section*{Questions}
+											\begin{enumerate}
+												\item{Define clotting time.}
+												\item{What are the other methods used to determine the clotting time?}
+												\item{Name the conditions in which clotting time is prolonged.}
+												\item{What is haemophilia? Comment on the clotting time in this condition.}
+												\item{What is clot retraction time?}
+												\item{Name the Vitamin K dependent coagulation factors.}
+												\item{What is an anticoagulant? Mention some invivo and invitro anticoagulants.}
+												\item{Name the proteins involved in fibrinolytic system.}
+											\end{enumerate}
+											%--------}}}
+											%-----ESR------{{{
 
-										\chapter*{\centering Estimation Of Erythrocyte Sedimentation Rate}
-										\begin{tabular}{p{5in} p{1in}}
-											\textbf{Exp No:}  & \textbf{Date:}\\
-										\end{tabular}
-										\section*{Aim}
-To determine the Erythrocyte Sedimentation Rate of the given blood sample.
-										\section*{Apparatus Required}
+											\chapter*{\centering Estimation Of Erythrocyte Sedimentation Rate}
+											\begin{tabular}{p{5in} p{1in}}
+												\textbf{Exp No:}  & \textbf{Date:}\\
+											\end{tabular}
+											\section*{Aim}
+											To determine the Erythrocyte Sedimentation Rate of the given blood sample.
+											\section*{Apparatus Required}
 
-									\addfig{%
-										\begin{figure}[h]
-											\centering
-											\includegraphics[scale=.5]{./esr.jpg}
-											\label{esr}
-											%\caption*{\textbf{Estimation Of Clotting Time}}
-										\end{figure}
-										}
-										Westergren’s pipette and stand, syringe with needle and 3.8\% sodium citrate solution (anticoagulant)
+											\addfig{%
+												\begin{figure}[h]
+													\centering
+													\includegraphics[scale=.5]{./esr.jpg}
+													\label{esr}
+													%\caption*{\textbf{Estimation Of Clotting Time}}
+												\end{figure}
+												}
+												Westergren’s pipette and stand, syringe with needle and 3.8\% sodium citrate solution (anticoagulant)
 
-										\section*{Principle}
-If blood treated with anticoagulant is allowed to stand in a tube placed vertically, the RBCs settle down gradually to the bottom since their specific gravity (1.093) is greater than that of the plasma (1.030).
-The rate  at  which the  RBCs settle down is called as Erythrocyte Sedimentation
-Rate.
+												\section*{Principle}
+												If blood treated with anticoagulant is allowed to stand in a tube placed vertically, the RBCs settle down gradually to the bottom since their specific gravity (1.093) is greater than that of the plasma (1.030).
+												The rate  at  which the  RBCs settle down is called as Erythrocyte Sedimentation
+												Rate.
 
-										\section*{Procedure}
-										\textbf{Westergren’s method:}\newline
-									\begin{enumerate}	
-\item{Westergren’s pipette (tube) which is used for this procedure is open at both ends and is graduated in $mm$ from 0-200 with a bore diameter of 2.5$mm$.}
-\item{A sterile solution of 3.8\% sodium citrate is used as an anticoagulant.}
-\item{In a clean dry syringe, draw 2ml of blood from the antecubital vein under aseptic precautions and mix with 0.4ml of 3.8\% sodium citrate solution in a plastic  container with its lid closed.}
-\item{Fill the Westergren’s pipette with blood by sucking, after placing the tip of the finger over the top of the pipette to control the flow of blood into and out of it, or with a rubber bulb.}
-\item{Bring the blood column to exact zero mark.}
-\item{Keeping the finger (or the rubber bulb) over the pipette, transfer it to the Westergren stand by firmly pressing its lower end into the rubber cushion. Now.}
-\item{slip the upper end of the pipette under the screw cap.}
-\item{After an hour, note the $mm$ of clear plasma above the red cells.}
-									\end{enumerate}
-										\section*{Result}
-										Erythrocyte Sedimentation Rate of the given blood sample is $\rule{5cm}{0.1cm}$ $mm$ in first hour.
-										\section*{Questions}
-										\begin{enumerate}
-\item{What is ESR?}
-\item{What are the 3 stages by which sedimentation of red cells occur?}
-\item{What are the other methods of estimating ESR?}
-\item{What are the advantages and disadvantages of Westergren method?}
-\item{What are the advantages and disadvantages of Wintrobe method?}
-\item{Can you use oxalate mixture in Westergren method and citrate in Wintrobe method?}
-\item{What are the factors determining ESR?}
-\item{What is rouleaux formation?}
-\item{Why is ESR reading taken after one hour?}
-\item{What is the normal ESR in males and females?}
-\item{Why is the ESR higher in females than that of males?}
-\item{What is the clinical significance of ESR?}
-\item{Mention some physiological and pathological conditions in which ESR is increased / decreased?}
-\item{What is zeta potential?}
-										\end{enumerate}
+												\section*{Procedure}
+												\textbf{Westergren’s method:}\newline
+												\begin{enumerate}	
+													\item{Westergren’s pipette (tube) which is used for this procedure is open at both ends and is graduated in $mm$ from 0-200 with a bore diameter of 2.5$mm$.}
+													\item{A sterile solution of 3.8\% sodium citrate is used as an anticoagulant.}
+													\item{In a clean dry syringe, draw 2ml of blood from the antecubital vein under aseptic precautions and mix with 0.4ml of 3.8\% sodium citrate solution in a plastic  container with its lid closed.}
+													\item{Fill the Westergren’s pipette with blood by sucking, after placing the tip of the finger over the top of the pipette to control the flow of blood into and out of it, or with a rubber bulb.}
+													\item{Bring the blood column to exact zero mark.}
+													\item{Keeping the finger (or the rubber bulb) over the pipette, transfer it to the Westergren stand by firmly pressing its lower end into the rubber cushion. Now.}
+													\item{slip the upper end of the pipette under the screw cap.}
+													\item{After an hour, note the $mm$ of clear plasma above the red cells.}
+												\end{enumerate}
+												\section*{Result}
+												Erythrocyte Sedimentation Rate of the given blood sample is $\rule{5cm}{0.1cm}$ $mm$ in first hour.
+												\section*{Questions}
+												\begin{enumerate}
+													\item{What is ESR?}
+													\item{What are the 3 stages by which sedimentation of red cells occur?}
+													\item{What are the other methods of estimating ESR?}
+													\item{What are the advantages and disadvantages of Westergren method?}
+													\item{What are the advantages and disadvantages of Wintrobe method?}
+													\item{Can you use oxalate mixture in Westergren method and citrate in Wintrobe method?}
+													\item{What are the factors determining ESR?}
+													\item{What is rouleaux formation?}
+													\item{Why is ESR reading taken after one hour?}
+													\item{What is the normal ESR in males and females?}
+													\item{Why is the ESR higher in females than that of males?}
+													\item{What is the clinical significance of ESR?}
+													\item{Mention some physiological and pathological conditions in which ESR is increased / decreased?}
+													\item{What is zeta potential?}
+												\end{enumerate}
+												%------------------------}}}
+%---PackedCellVolume-{{{
 
+												\chapter*{\centering Packed Cell Volume}
+												\begin{tabular}{p{5in} p{1in}}
+													\textbf{Exp No:}  & \textbf{Date:}\\
+												\end{tabular}
 
-										\chapter*{\centering Packed Cell Volume}
-										\begin{tabular}{p{5in} p{1in}}
-											\textbf{Exp No:}  & \textbf{Date:}\\
-										\end{tabular}
+												\section*{Aim}
 
-										\section*{Aim}
+												\addfig{%
+													\begin{figure}[h]
+														\centering
+														\includegraphics[scale=.5]{./pcv.jpg}
+														\label{pcv}
+														\caption*{\textbf{Estimation Of Packed Cell Volume }}
+													\end{figure}
+													}
+													To determine the packed cell volume of the given blood sample.
+													\section*{Apparatus Required}
+													Centrifuge, Hematocrit tube (Wintrobe tube), Pasteur pipette, syringe with needle and double oxalate or EDTA (anticoagulant).
+													\section*{Principle}
+													When the blood is mixed with an anticoagulant and centrifuged in a hematocrit tube, the red blood corpuscles settle down at the bottom. The ratio of the volume of the settled red blood cells to that of whole blood in the hematocrit tube is called the packed cell volume or the hematocrit. A thin grey-white layer of white cells at the top of the red blood cell column is called the buffy coat layer.
+													Hematocrit measures the percentage of volume of the packed red cells. It is used to diagnose and classify the various types of anemia, along with other red blood cell indices.
+													\section*{Procedure}
+													\textbf{Wintrobe's Method:}\newline
+													\begin{enumerate}
+														\item{Wintrobe’s tube is a thick walled cylindrical tube, 11$cm$ in length with an internal bore of 3$mm$. The tube is graduated from 0 to 10$cm$(100 $mm$) both in the ascending and descending order on either sides. The marking 0 – 10 from above downwards is used for ESR and the marking 0-10 from below upwards is used for reading PCV.}
+														\item{In a clean dry syringe, 2ml of blood is drawn from the antecubital vein under aseptic precautions and transferred to a container with anticoagulant.}
+														\item{The anticoagulated blood is then filled in the hematocrit tube from below upwards upto the mark 10 using the Pasteur pipette.}
+														\item{The tube is centrifuged at a rate of 3000 rpm for a period of 30 minutes.}
+														\item{At the end of 30 minutes, take the reading of upper level of packed red cell column.}
+													\end{enumerate}
+													\section*{Result}
+													The packed cell volume or the hematocrit value of the given blood sample is $\rule{2cm}{.1cm}$\%
+													\section*{Questions}
+													\begin{enumerate}
+														\item{Define PCV.}
+														\item{What is the clinical significance of PCV?}
+														\item{What is the normal range of PCV in males and females?}
+														\item{What is the ideal anti-coagulant used and why?}
+														\item{What is the difference between arterial and venous blood hematocrit?}
+													\end{enumerate}
+													%-----------------}}}
+%---------OsmoticFragility---{{{
+													\chapter*{\centering Osmotic Fragility}
+													\begin{tabular}{p{5in} p{1in}}
+														\textbf{Exp No:}  & \textbf{Date:}\\
+													\end{tabular}
 
-									\addfig{%
-										\begin{figure}[h]
-											\centering
-											\includegraphics[scale=.5]{./pcv.jpg}
-											\label{pcv}
-											\caption*{\textbf{Estimation Of Packed Cell Volume }}
-										\end{figure}
-										}
-										To determine the packed cell volume of the given blood sample.
-										\section*{Apparatus Required}
-										Centrifuge, Hematocrit tube (Wintrobe tube), Pasteur pipette, syringe with needle and double oxalate or EDTA (anticoagulant).
-										\section*{Principle}
-										When the blood is mixed with an anticoagulant and centrifuged in a hematocrit tube, the red blood corpuscles settle down at the bottom. The ratio of the volume of the settled red blood cells to that of whole blood in the hematocrit tube is called the packed cell volume or the hematocrit. A thin grey-white layer of white cells at the top of the red blood cell column is called the buffy coat layer.
-Hematocrit measures the percentage of volume of the packed red cells. It is used to diagnose and classify the various types of anemia, along with other red blood cell indices.
-										\section*{Procedure}
-										\textbf{Wintrobe's Method:}\newline
-										\begin{enumerate}
-\item{Wintrobe’s tube is a thick walled cylindrical tube, 11$cm$ in length with an internal bore of 3$mm$. The tube is graduated from 0 to 10$cm$(100 $mm$) both in the ascending and descending order on either sides. The marking 0 – 10 from above downwards is used for ESR and the marking 0-10 from below upwards is used for reading PCV.}
-\item{In a clean dry syringe, 2ml of blood is drawn from the antecubital vein under aseptic precautions and transferred to a container with anticoagulant.}
-\item{The anticoagulated blood is then filled in the hematocrit tube from below upwards upto the mark 10 using the Pasteur pipette.}
-\item{The tube is centrifuged at a rate of 3000 rpm for a period of 30 minutes.}
-\item{At the end of 30 minutes, take the reading of upper level of packed red cell column.}
-										\end{enumerate}
-										\section*{Result}
-										The packed cell volume or the hematocrit value of the given blood sample is $\rule{2cm}{.1cm}$\%
-										\section*{Questions}
-										\begin{enumerate}
-\item{Define PCV.}
-\item{What is the clinical significance of PCV?}
-\item{What is the normal range of PCV in males and females?}
-\item{What is the ideal anti-coagulant used and why?}
-\item{What is the difference between arterial and venous blood hematocrit?}
-										\end{enumerate}
+													\section*{Aim}
 
+													\addfig{%
+														\begin{figure}[h]
+															\centering
+															\includegraphics[scale=.5]{./osmoticFragility.jpg}
+															\label{osmoticFragility}
+															\caption*{\textbf{Estimation Of Osmotic Fragility}}
+														\end{figure}
+														}
+														To determine the osmotic fragility of red blood cells in the given sample of blood.
+														\section*{Apparatus Required}
+														Test tubes with rack, anticoagulated blood, NaCl, distilled water.
+														\section*{Principle}
+														The normal red blood cells can remain suspended in 0.9\% sodium chloride solution (normal saline) for hours without any change in their size \& shape. But when they are placed in decreasing strengths of hypotonic sodium chloride solutions they imbibe water due to osmosis and finally burst releasing the hemoglobin pigment in the medium.
+														\section*{Procedure}
+														\begin{enumerate}
+															\item{Sodium chloride solution of 1\% tonicity is prepared by dissolving 1 gram of NaCl in 100ml of distilled water.}
+															\item{Arrange the test tubes in the rack and number them serially from 1 to 12.}
+															\item{Prepare solutions of increasing hypotonicity by mixing required number of drops of 1\% NaCl solution and distilled water in the test tubes as given in the table.}
+															\item{Use separate droppers for saline solution and distilled water.}
+															\item{Note that the tube No.1 contains normal saline (0.9\% approximately) – Isotonic with plasma while tube No.12 contains distilled water.}
+															\item{Draw 2ml of venous blood and treat it with anticoagulant in a test tube.}
+															\item{Add one drop of blood into each of the above 12 tubes.}
+															\item{Invert each tube gently once to mix blood with saline.}
+															\item{Leave the test tubes undisturbed for one hour. Then observe the extent of hemolysis in each tube by holding the rack at eye level, with a white paper sheet behind it.}
+														\end{enumerate}
 
-										\chapter*{\centering Osmotic Fragility}
-										\begin{tabular}{p{5in} p{1in}}
-											\textbf{Exp No:}  & \textbf{Date:}\\
-										\end{tabular}
+														\begin{center}
+															\csvautotabular{./osmoticFragility.csv}
+														\end{center}
+														\section*{Intrepretation}
 
-										\section*{Aim}
-
-									\addfig{%
-										\begin{figure}[h]
-											\centering
-											\includegraphics[scale=.5]{./osmoticFragility.jpg}
-											\label{osmoticFragility}
-											\caption*{\textbf{Estimation Of Osmotic Fragility}}
-										\end{figure}
-										}
-To determine the osmotic fragility of red blood cells in the given sample of blood.
-										\section*{Apparatus Required}
-										Test tubes with rack, anticoagulated blood, NaCl, distilled water.
-										\section*{Principle}
-The normal red blood cells can remain suspended in 0.9\% sodium chloride solution (normal saline) for hours without any change in their size \& shape. But when they are placed in decreasing strengths of hypotonic sodium chloride solutions they imbibe water due to osmosis and finally burst releasing the hemoglobin pigment in the medium.
-										\section*{Procedure}
-										\begin{enumerate}
-\item{Sodium chloride solution of 1\% tonicity is prepared by dissolving 1 gram of NaCl in 100ml of distilled water.}
-\item{Arrange the test tubes in the rack and number them serially from 1 to 12.}
-\item{Prepare solutions of increasing hypotonicity by mixing required number of drops of 1\% NaCl solution and distilled water in the test tubes as given in the table.}
-\item{Use separate droppers for saline solution and distilled water.}
-\item{Note that the tube No.1 contains normal saline (0.9\% approximately) – Isotonic with plasma while tube No.12 contains distilled water.}
-\item{Draw 2ml of venous blood and treat it with anticoagulant in a test tube.}
-\item{Add one drop of blood into each of the above 12 tubes.}
-\item{Invert each tube gently once to mix blood with saline.}
-\item{Leave the test tubes undisturbed for one hour. Then observe the extent of hemolysis in each tube by holding the rack at eye level, with a white paper sheet behind it.}
-										\end{enumerate}
-										\section*{Intrepretation}
-
-										\begin{center}
-
-										\csvautotabular{./osmoticFragility.csv}
-										\end{center}
-										\begin{itemize}
-\item{Test tube with partial hemolysis shows a supernatant fluid with pink colour proportionate to the degree of hemolysis and a lower layer of sedimented red cells at the bottom of the tube.}
-\item{Test tube with complete hemolysis shows a clear homogeneously pink solution with no cells at the bottom.}
-\item{Test tube with no hemolysis shows a clear colourless supernatant solution with a layer of sedimented red cells at the bottom of the tube}
-										\end{itemize}
-										\section*{Result}
-Hemolysis begins in $\rule{4cm}{.2cm}$\% of NaCl solution.
-Hemolysis is complete in $\rule{4cm}{.2cm}$\% of NaCl solution.
-										\section*{Questions}
-										\begin{enumerate}
-\item{What is the normal range of osmotic fragility of red cells?}
-\item{What is osmosis?}
-\item{What do you mean by hypo/hyper tonicity?}
-\item{Define fragility.}
-\item{What happens to red cells when they are placed in isotonic, hypotonic and hypertonic solutions?}
-\item{Name some conditions which increase / decrease the osmotic fragility of the RBC.}
-\item{What are the advantages of the shape of red blood cells?}
-										\end{enumerate}
-										\chapter*{\centering Specific Gravity}
-
-										\begin{tabular}{p{5in} p{1in}}
-											\textbf{Exp No:}  & \textbf{Date:}\\
-										\end{tabular}
-
-										\section*{Aim}
+														\begin{itemize}
+															\item{Test tube with partial hemolysis shows a supernatant fluid with pink colour proportionate to the degree of hemolysis and a lower layer of sedimented red cells at the bottom of the tube.}
+															\item{Test tube with complete hemolysis shows a clear homogeneously pink solution with no cells at the bottom.}
+															\item{Test tube with no hemolysis shows a clear colourless supernatant solution with a layer of sedimented red cells at the bottom of the tube}
+														\end{itemize}
+														\section*{Result}
+														Hemolysis begins in $\rule{4cm}{.1cm}$\% of NaCl solution.\newline
+														Hemolysis is complete in $\rule{4cm}{.1cm}$\% of NaCl solution.
+														\section*{Questions}
+														\begin{enumerate}
+															\item{What is the normal range of osmotic fragility of red cells?}
+															\item{What is osmosis?}
+															\item{What do you mean by hypo/hyper tonicity?}
+															\item{Define fragility.}
+															\item{What happens to red cells when they are placed in isotonic, hypotonic and hypertonic solutions?}
+															\item{Name some conditions which increase / decrease the osmotic fragility of the RBC.}
+															\item{What are the advantages of the shape of red blood cells?}
+														\end{enumerate}	
+%----------------------------}}}
+%--------------------------------SpecificGravity------------------------------{{{
 
 
-										\section*{Apparatus Required}
-										\section*{Turk's Fluid Composition}
-										\section*{Procedure}
-										\section*{Calcualtion}
-										\section*{Result}
-										\section*{Questions}
+														\chapter*{\centering Specific Gravity}
 
+														\begin{tabular}{p{5in} p{1in}}
+															\textbf{Exp No:}  & \textbf{Date:}\\
+														\end{tabular}
 
-										\part{Clinical Physiology}
+														\section*{Aim}
+														To determine the specific gravity of the given blood sample by using “Copper sulphate falling drop method”.
 
+														\section*{Apparatus Required}
 
-									\end{document}
+														\addfig{%
+															\begin{figure}[h]
+																\centering
+																\includegraphics[scale=.5]{./specificGravity.jpg}
+																\label{specificGravity}
+																\caption*{\textbf{Determination Of Specific Gravity}}
+															\end{figure}
+															}
+															Test tubes with rack, distilled water, anticoagulated blood, copper sulphate crystals (CuSO$_4$.5H$_2$O), beaker, measuring jar, Pasteur pipette
+															\section*{Principle}
+															The specific gravity of blood is determined by comparing the specific gravity of one drop of blood with that of copper sulphate solution of known specific gravity.
+															\section*{Procedure}
+															\begin{enumerate}
+																\item{Stock solution of copper sulphate is prepared by dissolving 159 $g$ of CuSO$_4$.5H$_2$O in 1 liter of distilled water. The specific gravity of this stock solution is 1100.}
+																\item{Standard copper sulphate solutions of known specific gravity are prepared by mixing specific quantity of stock solution and distilled water as shown in table and label the test tubes.}
+																\item{Arrange the test tubes in rack in order of increasing specific gravity from left to right in test tube rack.}
+																\item{Draw 2ml of venous blood and treat it with the anticoagulant in a test tube.}
+																\item{Using Pasteur pipette a drop of blood is delivered into the middle test tube (no.4) from a height of about 1$cm$ above the surface of the copper sulphate solution so that it doesn’t touch the walls of the test tube.}
+																\item{The drop sinks to about 2-3$cm$, and loses its momentum in 3-4 seconds. The drop then behaves according to its specific gravity; observe its behaviour during the next 15 seconds.}
+																\item{If the specific gravity of blood drop is greater than that of the solution, the drop sinks to the bottom; if it is less than that of the solution, it rises to the surface and if it is the same as that of the solution, it becomes stationary and floats in the middle of the solution.}
+																\item{If the drop continues to sink in test tube no.4, try with higher specific gravity solution; if it begins to rise, try with the lower specific gravity solution till you come to a solution where the drop remains in the middle of the solution.}
+																\item{The whole observation has to be made in each step within 15 seconds.}
+																\item{The tube in which the blood drop remains suspended in the middle of the tube for at least 15 seconds is noted and the specific gravity mentioned on the tube is read and recorded.}
+
+															\end{enumerate}
+															\begin{center}
+																\csvautotabular{./specificGravity.csv}
+															\end{center}
+															\section*{Result}
+															The specific gravity of the given blood sample is $\rule{4cm}{.1cm}$.
+															\section*{Questions}
+															\begin{enumerate}
+																\item{Define specific gravity.}
+																\item{What is the normal specific gravity of blood, plasma, serum and red blood cells?}
+																\item{Why is copper sulphate solution used in this experiment?}
+																\item{Why should the observation be made within 15 seconds?}
+																\item{Enlist the physiological and pathological conditions in which the specific gravity of blood is increased and decreased.}
+																\item{What are the clinical applications of this method? }
+															\end{enumerate}
+															%----------------------------------------------------------------------------}}}
+															%-----------}}}
+															
+															\part{Clinical Physiology}
+
+														\chapter*{\centering General Examination}
+
+														\begin{tabular}{p{5in} p{1in}}
+															\textbf{Exp No:}  & \textbf{Date:}\\
+														\end{tabular}
+A thorough general examination is done before any systemic examination. Vital information such as name, age, sex, height, weight, occupation and address of the individual are recorded. The subject is comfortably seated. The room is well illuminated. It is always preferable to examine under good day light. The examiner should always be on the right side of the subject while examining.
+\section*{The following observations are recorded:}
+\subsection*{Level Of Consciousness}
+The level of consciousness can be clear sensorium, drowsiness, stupor, semicoma and coma.
+\subsection*{Orientation To Time, Place And Person}
+Ask about the day, date, month, year and time of day. Subject should know where they are (e.g. home or hospital) Similarly test his orientation towards person.
+\subsection*{Body Build And Nourishment}
+Build refers to skeletal frame work and nourishment refers to muscular bulk. It should be observed whether he is well / moderately / thin built and nourished.
+\subsection*{Temperature}
+Recorded by a clinical thermometer
+\\
+\textbf{Method of recording temperature}
+Do not touch the bulb of the thermometer. Shake down the mercury column into the bulb. Keep it under the tongue with the mouth closed for one minute before reading the temperature.
+
+											    \end{document}
